fix: fix internet archive logo being misaligned in desktop

--- a/src/shared/components/carousel/projects-item/index.module.css
+++ b/src/shared/components/carousel/projects-item/index.module.css
@@ -23,11 +23,6 @@
       & .logo {
         width: 70%;
         margin-bottom: 15px;
-
-        & img {
-          /* Some images don't occupy 100% so they need to be centered, e.g.: internet archive */
-          margin: 0 auto;
-        }
       }
 
       & .desc {
@@ -66,6 +61,13 @@
 
       & .topContainer {
         align-items: center;
+
+        & .logo {
+          & img {
+            /* Some images don't occupy 100% so they need to be centered, e.g.: internet archive */
+            margin: 0 auto;
+          }
+        }
 
         & .desc {
           margin: 30px 0;
